Fix the last of the high priority FindBugs warnings
git-svn-id: https://svn.apache.org/repos/asf/tomcat/trunk@1060538 13f79535-47bb-0310-9956-ffa450edef68